<resources>
    <string name="app_name">Wisata Banjarmasin</string>
    <string name="list">List</string>
    <string name="list_wisata">Wisata Banjarmasin</string>
    <string name="list_rekomendasi">Rekomendasi Tempat</string>
    <string name="sample_text">Sample Text</string>
    <string name="follow">Follow</string>
    <string name="email">rzqnfadhil@gmail.com</string>
    <string name="nama">Muhammad Rizqan Fadhil</string>
    <string name="tv_nama">Sample</string>
    <string name="tv_deskripsi">Sample Deskripsi</string>
    <string name="favorite">Favorite</string>
    <string name="todo">TODO</string>
</resources>
