<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclerView.DetailWisata">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/wisata_1"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="15sp"
            android:paddingTop="15sp"
            android:paddingEnd="15sp"
            android:text="@string/tv_nama"
            android:textColor="#000"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:overScrollMode="never">

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="15dp"
                android:text="@string/tv_deskripsi"
                android:textSize="16sp" />
        </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/btn_fav"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10sp"
        android:background="@drawable/round_button"
        android:text="@string/favorite"
        android:textColor="#fff"
        android:textSize="16sp" />
</RelativeLayout>