<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_profile"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/nama"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:background="@drawable/round_button"
        android:text="@string/follow"
        android:textColor="#fff"
        android:textSize="16sp" />
</RelativeLayout>