<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230sp"
        android:gravity="bottom"
        android:padding="16sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/list"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/list"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/list_wisata"
                android:textColor="#000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10sp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo" />
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/list_rekomendasi"
            android:textColor="#000"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wisata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            android:overScrollMode="never"
            tools:listitem="@layout/item_list_wisata" />
    </LinearLayout>
</LinearLayout>